--- a/Asteroids/Rakefile
+++ b/Asteroids/Rakefile
@@ -1,12 +1,61 @@
 PUREWEBHOME = ENV["PUREWEB_HOME"]
+PROJECT="Asteroids"
 
-desc "Deploy Asteroids HTML5 client"
-task :deploy do
+desc "Clean #{PROJECT}"
+task :clean do	
+end
+
+desc "Package #{PROJECT}"
+task :package do
+	puts "Need to implement PACKAGE for #{PROJECT}"
+end
+
+desc "Package clean #{PROJECT}"
+task :packageclean do
+	puts "Need to implement PACKAGECLEAN for #{PROJECT}"
+end 
+
+desc "Stage #{PROJECT}"
+task :stage do
 	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients")
 	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/css")
+	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/js")
 	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/img")
-    FileUtils.cp_r(Dir["css/*"], "#{PUREWEBHOME}/nginx/clients/css")
+
+	FileUtils.cp_r(Dir["css/*"], "#{PUREWEBHOME}/nginx/clients/css")
+    FileUtils.cp_r(Dir["js/*"], "#{PUREWEBHOME}/nginx/clients/js")
     FileUtils.cp_r(Dir["img/*"], "#{PUREWEBHOME}/nginx/clients/img")
-    FileUtils.cp_r("./AsteroidsApp.html", "#{PUREWEBHOME}/nginx/clients/")
-    FileUtils.cp_r("./AsteroidsApp.js", "#{PUREWEBHOME}/nginx/clients/")
+
+    FileUtils.cp_r("./AsteroidsApp.html", "#{PUREWEBHOME}/nginx/clients/")    
+end
+
+desc "Stage clean #{PROJECT}"
+task :stageclean do
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/AsteroidsApp.html", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/js/AsteroidsApp.js", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/css/AsteroidsApp.css", :force => true)
+
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/background0.jpg", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/background1.jpg", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/background2.jpg", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/background3.jpg", :force => true)	
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/background4.jpg", :force => true)	
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/fire.png", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/forward.png", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/left.png", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/reverse.png", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/right.png", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/shields.png", :force => true)	
+end
+
+desc "Build all the things for #{PROJECT}"
+task :all do
+	Rake::Task[:stageclean].invoke
+	Rake::Task[:stage].invoke
+	Rake::Task[:packageclean].invoke
+	Rake::Task[:package].invoke
+end
+
+task :default do
+	sh("rake -T")
 end
