--- a/DDx/Rakefile
+++ b/DDx/Rakefile
@@ -1,13 +1,59 @@
 PUREWEBHOME = ENV["PUREWEB_HOME"]
+PROJECT="Scribble"
 
-desc "Deploy DDx HTML5 client"
-task :deploy do
+desc "Clean #{PROJECT}"
+task :clean do	
+	FileUtils.rm_r("bower_components", :force => true)
+end
+
+desc "Setup #{PROJECT}"
+task :setup do
 	sh("bower install")
-    FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients")
+end
+
+desc "Package #{PROJECT}"
+task :package do
+	puts "Need to implement PACKAGE for #{PROJECT}"
+end
+
+desc "Package clean #{PROJECT}"
+task :packageclean do
+	puts "Need to implement PACKAGECLEAN for #{PROJECT}"
+end 
+
+desc "Stage #{PROJECT}"
+task :stage => [:setup] do
+	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients")
 	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/css")
+	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/js")
 	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/bower_components")
+
 	FileUtils.cp_r(Dir["css/*"], "#{PUREWEBHOME}/nginx/clients/css")
-	FileUtils.cp_r(Dir["bower_components/*"], "#{PUREWEBHOME}/nginx/clients/bower_components")
-    FileUtils.cp_r("./DDxApp.html", "#{PUREWEBHOME}/nginx/clients/")
-    FileUtils.cp_r("./DDxApp.js", "#{PUREWEBHOME}/nginx/clients/")
+    FileUtils.cp_r(Dir["js/*"], "#{PUREWEBHOME}/nginx/clients/js")
+    FileUtils.cp_r(Dir["bower_components/*"], "#{PUREWEBHOME}/nginx/clients/bower_components")
+
+    FileUtils.cp_r("./DDxApp.html", "#{PUREWEBHOME}/nginx/clients/")    
+end
+
+desc "Stage clean #{PROJECT}"
+task :stageclean do
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/DDxApp.html", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/js/DDxApp.js", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/css/DDxApp.css", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/css/button.css", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/css/checkbox.css", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/css/slider.css", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/bower_components", :force => true)
+end
+
+desc "Build all the things for #{PROJECT}"
+task :all do
+	Rake::Task[:stageclean].invoke
+	Rake::Task[:stage].invoke
+	Rake::Task[:packageclean].invoke
+	Rake::Task[:package].invoke
+end
+
+task :default do
+	sh("rake -T")
 end
