--- a/Scribble/Rakefile
+++ b/Scribble/Rakefile
@@ -1,10 +1,47 @@
 PUREWEBHOME = ENV["PUREWEB_HOME"]
+PROJECT="Scribble"
 
-desc "Deploy Scribble HTML5 client"
-task :deploy do
+desc "Clean #{PROJECT}"
+task :clean do	
+end
+
+desc "Package #{PROJECT}"
+task :package do
+	puts "Need to implement PACKAGE for #{PROJECT}"
+end
+
+desc "Package clean #{PROJECT}"
+task :packageclean do
+	puts "Need to implement PACKAGECLEAN for #{PROJECT}"
+end 
+
+desc "Stage #{PROJECT}"
+task :stage do
 	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients")
 	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/css")
+	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/js")
+	
 	FileUtils.cp_r(Dir["css/*"], "#{PUREWEBHOME}/nginx/clients/css")
-    FileUtils.cp_r("./ScribbleApp.html", "#{PUREWEBHOME}/nginx/clients/")
-    FileUtils.cp_r("./ScribbleApp.js", "#{PUREWEBHOME}/nginx/clients/")
+    FileUtils.cp_r(Dir["js/*"], "#{PUREWEBHOME}/nginx/clients/js")
+    
+    FileUtils.cp_r("./ScribbleApp.html", "#{PUREWEBHOME}/nginx/clients/")    
+end
+
+desc "Stage clean #{PROJECT}"
+task :stageclean do
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/ScribbleApp.html", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/js/ScribbleApp.js", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/css/ScribbleApp.css", :force => true)
+end
+
+desc "Build all the things for #{PROJECT}"
+task :all do
+	Rake::Task[:stageclean].invoke
+	Rake::Task[:stage].invoke
+	Rake::Task[:packageclean].invoke
+	Rake::Task[:package].invoke
+end
+
+task :default do
+	sh("rake -T")
 end
