--- a/Scribble/Rakefile
+++ b/Scribble/Rakefile
@@ -8,6 +8,7 @@ task :clean do
 	FileUtils.rm_r("bower_components", :force => true)
 end
 
+desc "Setup #{PROJECT}"
 task :setup do
 	sh("bower install")
 end
@@ -29,23 +30,16 @@ end
 
 desc "Stage #{PROJECT}"
 task :stage => [:setup] do	
-	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/css")
-	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/js")
-	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/bower_components")
-	
-	FileUtils.cp_r(Dir["css/*"], "#{PUREWEBHOME}/nginx/clients/css")
-    FileUtils.cp_r(Dir["js/*"], "#{PUREWEBHOME}/nginx/clients/js")
-    FileUtils.cp_r(Dir["bower_components/*"], "#{PUREWEBHOME}/nginx/clients/bower_components")
-    
-    FileUtils.cp_r("./ScribbleApp.html", "#{PUREWEBHOME}/nginx/clients/")    
+	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/#{PROJECT}")		
+	#Copy everything but the Rakefile
+	files = Dir.glob("*")
+	files.delete("Rakefile") 
+	FileUtils.cp_r(files, "#{PUREWEBHOME}/nginx/clients/#{PROJECT}/")		
 end
 
 desc "Stage clean #{PROJECT}"
 task :stageclean do
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/ScribbleApp.html", :force => true)
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/js/ScribbleApp.js", :force => true)
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/css/ScribbleApp.css", :force => true)
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/bower_components/shake.js", :force => true)
+	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/#{PROJECT}", :force => true)
 end
 
 desc "Build all the things for #{PROJECT}"
