--- a/Asteroids/Rakefile
+++ b/Asteroids/Rakefile
@@ -33,6 +33,11 @@ task :stage do
 	files = Dir.glob("*")
 	files.delete("Rakefile") 
 	FileUtils.cp_r(files, "#{PUREWEBHOME}/nginx/clients/#{PROJECT}/")	
+	
+	if File.exist?("#{PUREWEBLIBS}/HTML5/pureweb.min.js")
+		FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/#{PROJECT}/lib/pureweb")		
+		FileUtils.cp_r("#{PUREWEBLIBS}/HTML5/.", "#{PUREWEBHOME}/nginx/clients/#{PROJECT}/lib/pureweb")	
+	end
 end
 
 desc "Stage clean #{PROJECT}"
