--- a/Asteroids/Rakefile
+++ b/Asteroids/Rakefile
@@ -1,69 +1,69 @@
-PUREWEBHOME = ENV["PUREWEB_HOME"]
-PUREWEBLIBS = ENV["PUREWEB_LIBS"]
+project="Asteroids"
+purewebhome=ENV["PUREWEB_HOME"]
 
-PROJECT="Asteroids"
-
-desc "Setup #{PROJECT}"
+desc "Setup #{project}"
 task :setup do
+	Dir.chdir(File.dirname(__FILE__))
 end
 
-desc "Clean #{PROJECT}"
+desc "Clean #{project}"
 task :clean do	
 end
 
-desc "Deploy #{PROJECT}"
-task :deploy do
-	Rake::Task[:stage].invoke
+desc "Deploy #{project}"
+task :deploy => [:stage] do
 end
 
-desc "Package #{PROJECT}"
+desc "Package #{project}"
 task :package do
-	puts "Need to implement PACKAGE for #{PROJECT}"
+	puts "Need to implement PACKAGE for #{project}"
 end
 
-desc "Package clean #{PROJECT}"
+desc "Package clean #{project}"
 task :packageclean do
-	puts "Need to implement PACKAGECLEAN for #{PROJECT}"
+	puts "Need to implement PACKAGECLEAN for #{project}"
 end 
 
-desc "Stage #{PROJECT}"
-task :stage do	
-	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/css")
-	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/js")
-	FileUtils.mkdir_p("#{PUREWEBHOME}/nginx/clients/img")	
+desc "Stage #{project}"
+task :stage => [:setup] do	
+	FileUtils.mkdir_p("#{purewebhome}/nginx/clients/css")
+	FileUtils.mkdir_p("#{purewebhome}/nginx/clients/js")
+	FileUtils.mkdir_p("#{purewebhome}/nginx/clients/img")	
 
-	FileUtils.cp_r(Dir["css/*"], "#{PUREWEBHOME}/nginx/clients/css")
-    FileUtils.cp_r(Dir["js/*"], "#{PUREWEBHOME}/nginx/clients/js")
-    FileUtils.cp_r(Dir["img/*"], "#{PUREWEBHOME}/nginx/clients/img")
+	FileUtils.cp_r(Dir["css/*"], "#{purewebhome}/nginx/clients/css")
+    FileUtils.cp_r(Dir["js/*"], "#{purewebhome}/nginx/clients/js")
+    FileUtils.cp_r(Dir["img/*"], "#{purewebhome}/nginx/clients/img")
  
-    FileUtils.cp_r("./AsteroidsApp.html", "#{PUREWEBHOME}/nginx/clients/")    
+    FileUtils.cp_r("./AsteroidsApp.html", "#{purewebhome}/nginx/clients/")    
 end
 
-desc "Stage clean #{PROJECT}"
+desc "Stage clean #{project}"
 task :stageclean do
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/AsteroidsApp.html", :force => true)
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/js/AsteroidsApp.js", :force => true)
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/css/AsteroidsApp.css", :force => true)
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/AsteroidsApp.html", :force => true)
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/js/AsteroidsApp.js", :force => true)
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/css/AsteroidsApp.css", :force => true)
 
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/background0.jpg", :force => true)
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/background1.jpg", :force => true)
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/background2.jpg", :force => true)
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/background3.jpg", :force => true)	
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/background4.jpg", :force => true)	
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/fire.png", :force => true)
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/forward.png", :force => true)
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/left.png", :force => true)
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/reverse.png", :force => true)
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/right.png", :force => true)
-	FileUtils.rm_r("#{PUREWEBHOME}/nginx/clients/img/shields.png", :force => true)	
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/img/background0.jpg", :force => true)
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/img/background1.jpg", :force => true)
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/img/background2.jpg", :force => true)
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/img/background3.jpg", :force => true)	
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/img/background4.jpg", :force => true)	
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/img/fire.png", :force => true)
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/img/forward.png", :force => true)
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/img/left.png", :force => true)
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/img/reverse.png", :force => true)
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/img/right.png", :force => true)
+	FileUtils.rm_r("#{purewebhome}/nginx/clients/img/shields.png", :force => true)	
 end
 
-desc "Build all the things for #{PROJECT}"
-task :all do
-	Rake::Task[:stageclean].invoke
-	Rake::Task[:stage].invoke
-	Rake::Task[:packageclean].invoke
-	Rake::Task[:package].invoke
+desc "Build all the things for #{project}"
+task :all do |t|
+	scope = t.scope.first || ''
+	scope = scope.length > 0 ? scope + ":" : scope
+	Rake::Task[scope+'stageclean'].invoke
+	Rake::Task[scope+'stage'].invoke
+	Rake::Task[scope+'packageclean'].invoke
+	Rake::Task[scope+'package'].invoke
 end
 
 task :default do
