PWEB-5275 - add ScribbleQt to the list of sample client directories

--- a/Scribble/Rakefile
+++ b/Scribble/Rakefile
@@ -3,7 +3,7 @@ project="Scribble"
 purewebhome = ENV['PUREWEB_HOME']
 pureweblibs = ENV['PUREWEB_LIBS']
 
-variations = ['Cs','Java','Cpp']
+variations = ['Cs','Java','Cpp','Qt']
 
 desc "Clean #{project}"
 task :clean do	
