PWEB-5382 - Updating client samples to remove the port number when started and change copying of client to only copy one version

--- a/Asteroids/Rakefile
+++ b/Asteroids/Rakefile
@@ -3,7 +3,7 @@ project="Asteroids"
 purewebhome = ENV['PUREWEB_HOME']
 pureweblibs = ENV['PUREWEB_LIBS']
 
-variations = ['Java']
+variations = ['Client']
 
 desc "Setup #{project}"
 task :setup do
