--- a/Scribble/Rakefile
+++ b/Scribble/Rakefile
@@ -3,7 +3,7 @@ project="Scribble"
 purewebhome = ENV['PUREWEB_HOME']
 pureweblibs = ENV['PUREWEB_LIBS']
 
-variations = ['Cs','Java','Cpp','Qt']
+variations = ['Client']
 
 desc "Clean #{project}"
 task :clean do	
