PWEB-6202 - App secret key authorization

--- a/Scribble/bower.json
+++ b/Scribble/bower.json
@@ -2,7 +2,8 @@
   "name": "scribble",
   "version": "0.0.0",
   "dependencies": {
-    "shake.js": "*"
+    "shake.js": "*",
+	"libsodium.js" : "*"
   },
   "appPath": "app"
 }
