PWEB-6311 Switch to using internal sodium library

--- a/Scribble/bower.json
+++ b/Scribble/bower.json
@@ -2,8 +2,7 @@
   "name": "scribble",
   "version": "0.0.0",
   "dependencies": {
-    "shake.js": "*",
-	"libsodium.js" : "*"
+    "shake.js": "*"
   },
   "appPath": "app"
 }
