--- a/DDx/bower.json
+++ b/DDx/bower.json
@@ -2,7 +2,7 @@
   "name": "ddx",
   "version": "0.0.0",
   "dependencies": {
-    "closurelibrary": "*"
+    "closurelibrary": "v20160315"
   },
   "appPath": "app"
 }
